objects/DX_Product_Info__c.object
<CustomObject>
    <label>Dx Product Info</label>
    <nameField>
        <label>DX Product Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dx Product Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Rate_10__c</fullName>
        <label>Rate 10</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_11__c</fullName>
        <label>Rate 11</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_12__c</fullName>
        <label>Rate 12</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CF__c</fullName>
        <label>Total CF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NIPT_rate__c</fullName>
        <label>NIPT rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_FTS__c</fullName>
        <label>Total FTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PES__c</fullName>
        <label>Total PES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_STS__c</fullName>
        <label>Total STS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_CPT_10__c</fullName>
        <label>New CPT 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CPT_11__c</fullName>
        <label>New CPT 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CPT_12__c</fullName>
        <label>New CPT 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_NIPT__c</fullName>
        <label>TOTAL NIPT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_box__c</fullName>
        <label>Comment box</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PES_82105_AFP__c</fullName>
        <label>PES - 82105 AFP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_10__c</fullName>
        <label>Description 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_11__c</fullName>
        <label>Description 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_12__c</fullName>
        <label>Description 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OncoChip_81479__c</fullName>
        <inlineHelpText>OncoChip - 81479 Cytogenomic microarray analysis for neoplasia</inlineHelpText>
        <label>OncoChip - 81479 Cytogenomic microarray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTS_84163_PAPP_A__c</fullName>
        <label>FTS - 84163 PAPP-A</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTS_84704_PAPP_A__c</fullName>
        <label>FTS - 84704 PAPP-A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PES_84163_PAPP_A__c</fullName>
        <label>PES - 84163 PAPP-A</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTS_84163_free_beta__c</fullName>
        <label>FTS - 84163 free beta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTS_84704_free_beta__c</fullName>
        <label>FTS - 84704 free beta</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STS_84704_free_beta__c</fullName>
        <label>STS - 84704 free beta</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STS_86336_Inhibin_A__c</fullName>
        <label>STS - 86336 Inhibin A</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Information__c</fullName>
        <label>Contract Information</label>
        <referenceTo>Contract_Information__c</referenceTo>
        <relationshipName>DX_Product_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NIPT_PA_Required_y_n__c</fullName>
        <label>NIPT PA Required? (y/n)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISH_88283_Add_banding__c</fullName>
        <label>FISH - 88283 Add banding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FragileX_Dx_81244_FMR1__c</fullName>
        <inlineHelpText>FragileX Dx - 81244 FMR1  fragile X gene analysis to characterize alleles</inlineHelpText>
        <label>FragileX Dx - 81244 FMR1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microarray_PA_Required__c</fullName>
        <label>Microarray PA Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_the_Fee_Schedule__c</fullName>
        <label>Select the Fee Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMS National Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>State Medicare Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>State Medicaid Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>Plan Specific/Proprietary Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_81220_cystic_fibrosis__c</fullName>
        <label>CF - 81220 cystic fibrosis</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_exceptions_notes__c</fullName>
        <label>Contract exceptions/notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X_Percent_discount_amount__c</fullName>
        <label>X Percent discount amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FragileX_Screen_81243_FMR1__c</fullName>
        <inlineHelpText>FragileX Screen - 81243 FMR1 fragile X gene analysis to detect abnormal alleles</inlineHelpText>
        <label>FragileX Screen - 81243 FMR1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFP_82106_amniotic_fluid_AFP__c</fullName>
        <label>AFP - 82106 amniotic fluid AFP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Reimbursement_Method__c</fullName>
        <label>Contract Reimbursement Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X% discount off billable charges</fullName>
                </value>
                <value>
                    <fullName>X% of Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>X% discount off Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>Code specific</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Karyotype_88233Tissue_skin_POC__c</fullName>
        <inlineHelpText>Karyotype - 88233 Tissue/skin/POC establish culture</inlineHelpText>
        <label>Karyotype-88233Tissue/skin/POC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88262_Chrom_analysis__c</fullName>
        <inlineHelpText>Karyotype - 88262 Chrom analysis (15-20 cells/2 ktype)</inlineHelpText>
        <label>Karyotype - 88262 Chrom analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88269_Chrom_Analysis__c</fullName>
        <inlineHelpText>Karyotype - 88269 Chrom Analysis, in situ for amnio, 1 Karyotype w/banding</inlineHelpText>
        <label>Karyotype - 88269 Chrom Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_82677_UE3_Assay_of_estriol__c</fullName>
        <label>STS - 82677 - UE3 /Assay of estriol</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AChE_82013_acetylcholinesterase__c</fullName>
        <label>AChE - 82013 acetylcholinesterase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIPT_CPT_Code_84999_81479_81599__c</fullName>
        <label>NIPT CPT Code (84999, 81479, 81599)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPP_88291Molecular_cytogenetics__c</fullName>
        <label>PPP-88291Molecular cytogenetics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISH_88271_Molecular_cytogenetics__c</fullName>
        <inlineHelpText>FISH - 88271 Molecular cytogenetics; DNA probe, eac (EG, FISH)</inlineHelpText>
        <label>FISH - 88271 Molecular cytogenetics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISH_88291_Molecular_cytogenetics__c</fullName>
        <inlineHelpText>FISH - 88291 Molecular cytogenetics, interpretation &amp; report</inlineHelpText>
        <label>FISH - 88291 Molecular cytogenetics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_82105_AFP_MS_Alpha_fetoprotein__c</fullName>
        <label>STS - 82105 AFP-MS / Alpha-fetoprotein</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FISH_88273_ISH_analysis_10_30_cells__c</fullName>
        <label>FISH - 88273 ISH analysis (10-30 cells)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88280_Chromosome_Analysis__c</fullName>
        <inlineHelpText>Karyotype - 88280 Chromosome Analysis, Additional Karyotype</inlineHelpText>
        <label>Karyotype - 88280 Chromosome Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PES_84999_misc_chemistry_procedure_f__c</fullName>
        <label>PES - 84999 misc. chemistry procedure</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPP_88271_x_20_Molecular_cytogenetic__c</fullName>
        <label>PPP - 88271 (x 20) Molecular cytogenetic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_ChipOS_SNP_81229_SNP_based__c</fullName>
        <label>Signature ChipOS + SNP - 81229 SNP-based</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISH_88230_Tissue_culture_lymphocytes__c</fullName>
        <label>FISH - 88230 Tissue culture lymphocytes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_81265patient_comparative_specimen__c</fullName>
        <inlineHelpText>MCC - 81265 patient and comparative specimen</inlineHelpText>
        <label>MCC-81265patient &amp; comparative specimen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISH_88235Tissue_culture_amnioticfluid__c</fullName>
        <inlineHelpText>FISH - 88235 Tissue culture of amniotic fluid/ Establish Culture</inlineHelpText>
        <label>FISH - 88235Tissue culture amnioticfluid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88235Tissue_culture_amniotic__c</fullName>
        <inlineHelpText>Karyotype - 88235 Tissue culture of amniotic fluid/ Establish Culture</inlineHelpText>
        <label>Karyotype-88235Tissue culture amniotic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88261_Five_cells_1_karyotype__c</fullName>
        <inlineHelpText>Karyotype - 88261 Five cells 1 karyotype, with banding</inlineHelpText>
        <label>Karyotype - 88261 Five cells 1 karyotype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88291_Molecular_cytogenetics__c</fullName>
        <inlineHelpText>Karyotype - 88291 Molecular cytogenetics, interpretation &amp; report</inlineHelpText>
        <label>Karyotype - 88291 Molecular cytogenetics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_ChipOS_81228_oligo_base_arra__c</fullName>
        <label>Signature ChipOS -81228 oligo-base array</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISH_88233Tissue_skin_POC_establish_cult__c</fullName>
        <inlineHelpText>FISH - 88233 Tissue/skin/POC establish culture</inlineHelpText>
        <label>FISH-88233Tissue/skin/POC establish cult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyotype_88230Tissue_culture_lymphocyte__c</fullName>
        <label>Karyotype-88230Tissue culture lymphocyte</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>NTD</fullName>
        <active>true</active>
        <label>NTD</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGL</fullName>
        <active>true</active>
        <label>SGL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
</CustomObject>